	the existing code was sufficient for same process channels, this could also
	halt any unnecessary packet sending if a response packet was received after
	an earlier request.
	* Fixed and improved error messages for timed out blocking
	CrossServerCommunication calls.
	* Implemented CrossServerCommunication methods for relaying buddy list
	related operations.

2012-11-11  GoldenKevin  (revision 169)

	* Implemented CrossServerCommunication methods for sending party packets to
	the center server.

2012-11-11  GoldenKevin  (revision 170)

	* Refactored InterServerPartyOps so it can also replace top level opcodes
	between game and center servers for chatrooms with sub opcodes for "center
	server synchronization" once InterChannelCommunication is replaced.
	Refactored any instances of "party synchronization" to "center server
	synchronization."
	* Instances of "cross channel communication" refactored to "cross channel
	synchronization."

2012-11-11  GoldenKevin  (revision 171)

	* Fixed CrossServerSynchronization.fillPartyList.
	* Refactored remaining instances of "party synchronization" to "center
	server synchronization."
	* Added support for chatrooms in CrossServerSynchronization.

2012-11-11  GoldenKevin  (revision 172)

	* Dropped in CrossServerSynchronization to replace InterChannelCommunication
	and replaced any references of the old class name. Also refactored several
	methods so "interchannel" can no longer be found in any identifiers.
	* Fixed logic errors for player scan, whisper, buddy invites, and chatroom
	invites in CrossServerSynchronization.
	* Fixed CrossServerSynchronization.initializeLocalChannels.
	* Shortened the channel change response timeout to match cross channel
	synchronization blocking call timeout.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.